# detector-tensorrt-yolov5-linux

./: CMakeLists.txt  gen_wts.py  readme.md
include/: api.h  cJSON.h  common.h  common.hpp  detector.h  labels.h  logging.h  utils.h  yolo_layer.h  yololayer.h  yolov5.h
model/: old_main.cpp
src/: api.cpp  cJSON.c  calibrator.cpp  common.cpp  detector.cpp  main.cpp  old_main.cpp  utils.cpp  yolo_layer.cu  yololayer.cu  yolov5.cpp
test/: test.py
tools/: gen_wts.py
